tests/k8s_testcases/network-policy-checks-bad-path/port_wrong_label_form2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: port-test-form2
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
        - port: abc-def12_
          protocol: UDP
